<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/fixitup_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-300dp"
        android:contentDescription="@string/first_fragment_label"
        android:src="@drawable/fixitup_logo" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/inter_medium"
        android:gravity="center"
        android:paddingBottom="300dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:paddingBottom="200dp"
        android:text="@string/it_is_easier_to_sign_up_now"
        android:textSize="20sp" />

    <Button
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="535dp"
        android:layout_marginRight="50dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/i_ll_use_email_or_phone"
        android:textAlignment="center"
        android:textColor="#0A0A0A"/>

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="700dp"
        android:layout_marginRight="25dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/already_have_a_account_login"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle_1"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="450dp"
        android:contentDescription="@string/first_fragment_label"/>

    <TextView
        android:id="@+id/myImageViewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/myImageView"
        android:layout_alignTop="@+id/myImageView"
        android:layout_alignEnd="@+id/myImageView"
        android:layout_alignBottom="@+id/myImageView"
        android:layout_margin="4dp"
        android:gravity="center"
        android:fontFamily="@font/inter_medium"
        android:text="@string/sign_up_using_facebook"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/myImageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="390dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/rectangle_1"
        android:contentDescription="@string/first_fragment_label" />

    <TextView
        android:id="@+id/myImageViewText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/myImageView1"
        android:layout_alignTop="@+id/myImageView1"
        android:layout_alignEnd="@+id/myImageView1"
        android:layout_alignBottom="@+id/myImageView1"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/inter_medium"
        android:gravity="center"
        android:text="@string/sign_up_using_google"
        android:textColor="@color/white"/>

</RelativeLayout>