<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signinpage"
    android:id="@+id/signinpage">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ecclipseee__4_"
        android:layout_marginTop="-40dp"
        android:layout_marginStart="140dp"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-140dp"
        android:layout_marginTop="-170dp"
        android:src="@drawable/ecclipseee__1_"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ecclipseee__3_"
        android:layout_marginTop="95dp"
        android:layout_marginStart="-110dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        android:text="@string/hello"
        android:textSize="25sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center_horizontal"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="35sp"/>


    <ImageView
        android:id="@+id/emailaddress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="60dp"
        android:src="@drawable/user_rec1"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/emailaddress2"
        android:layout_alignTop="@+id/emailaddress2"
        android:layout_alignEnd="@+id/emailaddress2"
        android:layout_alignBottom="@+id/emailaddress2"
        android:background="transparent_"
        android:fontFamily="@font/inter_regular"
        android:hint="Enter your Email Address"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="#7F7F7F"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailaddress2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        android:src="@drawable/user_rec1"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/password2"
        android:layout_alignTop="@+id/password2"
        android:layout_alignEnd="@+id/password2"
        android:layout_alignBottom="@+id/password2"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:longClickable="false"
        android:paddingStart="20dp"
        android:background="transparent_"
        android:textColorHint="#7F7F7F"
        android:textSize="14sp" />

    <RadioButton
        android:id="@+id/rememberme"
        android:layout_width="264dp"
        android:layout_height="30dp"
        android:layout_below="@+id/password2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="72dp"
        android:fontFamily="@font/inter_medium"
        android:text="Remember Me"
        android:textSize="11sp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/rememberme"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-9dp"
        android:layout_marginEnd="21dp"
        android:fontFamily="@font/inter_medium"
        android:text="Forgot Password?"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="60dp"
        app:srcCompat="@drawable/rectangle_7"
        android:id="@+id/signinbutton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/signinbutton"
        android:layout_alignBottom="@+id/signinbutton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="@font/inter_semibold"
        android:paddingLeft="75dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="Sign In"
        android:textColor="@color/white"
        android:textSize="22sp" />

</RelativeLayout>